# RibModelFramework

./: .Rbuildignore  .gitignore  .project  .travis.yml  DESCRIPTION  NAMESPACE  NEWS.md  README.md  cleanup  config.status  configure  configure.ac  cran-comments.md  ecoli_full_genome_est_phi_fonse_run_2.Rout  tmp.R
.githooks/: post-commit
DevRscripts/: .RData  .Rapp.history  .Rhistory  1000RestartFile.txt  100RestartFile.txt  100restartFile.rst  10restartFile.rst  1_MCMCObject.Rdat  1_kluyveri_full.R  1_kluyveri_full.csv  1_kluyveri_full_filtered_expression.csv  1_kluyveri_full_filtered_expression_selectionShared.csv  1_kluyveri_full_mixProbs_50.csv  1_kluyveri_full_selectionShared.R  1_kluyveri_full_selectionShared.csv  200RestartFile.txt  20RestartFile.txt  20restartFile.rst  30restartFile.rst  400RestartFile.txt  40RestartFile.txt  40restartFile.rst  50restartFile.rst  600RestartFile.txt  60RestartFile.txt  60restartFile.rst  70restartFile.rst  800RestartFile.txt  80RestartFile.txt  80restartFile.rst  90restartFile.rst  FONSETraces.Rdat  GraphROCObjects.R  MCMCObject.Rdat  MutationMixture1.csv  MutationMixture2.csv  RFPAlphaValues.csv  RFPLambdaPrimeValues.csv  RFPObject.Rdat  RFPPhiValues.csv  (+71 more)
R/: .RData  .Rhistory  RFP_test_Mar_27.csv  RcppExports.R  colorSchemes.R  genomeObject.R  mcmcObject.R  modelObject.R  onloadPackage.R  parameterObject.R  plotMCMCAlgorithmObject.R  plotModelObject.R  plotParameterObject.R  plotTraceObject.R  traceObject.R
data/: IKJ.csv  TestReadObservedPhiValuesFilled.csv  TestReadObservedPhiValuesMissingGeneByIndex.csv  test.csv  testReadObservedPhiValuesValid.csv
desc/: .~lock.codon_tables.xlsx#  codon_tables.xlsx  rfp.model.aux  rfp.model.bbl  rfp.model.tex  ribModel_specs.aux  ribModel_specs.tex  ribModel_specs.toc
inst/: testGenome.fasta
man/: acfCSP.Rd  acfMCMC.Rd  addObservedSynthesisRateSet.Rd  calculate_marginal_log_likelihood.Rd  calculeSCUO.Rd  combineThreeDimensionalTrace.Rd  combineTwoDimensionalTrace.Rd  convergence.test.Rd  cspACF.Rd  extractBaseInfo.Rd  fixDEta.Rd  fixDM.Rd  fixSphi.Rd  geom_mean.Rd  getAdaptiveWidth.Rd  getCSPEstimates.Rd  getCodonCountsForAA.Rd  getCodonSpecificPosteriorMeanForCodon.Rd  getCodonSpecificPosteriorVarianceForCodon.Rd  getCodonSpecificQuantilesForCodon.Rd  getEstimatedMixtureAssignmentForGene.Rd  getExpressionEstimates.Rd  (+60 more)
(+511 files in other folders)
